--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
     "react": "^18",
