--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "svix": "^1.14.0"
+    "svix": "^1.14.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
